# python-ops-starter

./: .black  .gitignore  .isort.cfg  .pre-commit-config.yaml  .ruff.toml  README.md  hello.py  pyproject.toml
.cursor/rules/: api_development.mdc  code_formatting.mdc  commit_policy.mdc  database.mdc  deployment.mdc  docker.mdc  documentation.mdc  integrations.mdc  linting.mdc  ml.mdc  package_manager.mdc  rule_display.mdc  testing.mdc  version_control.mdc
configs/: postgresql_config.sql
docs/: api_guidelines.md  display_rule_identifier.md  docker_guidelines.md  documentation_update_procedure.md  flyio_deployment.md  git_guidelines.md  integration_guidelines.md  ml_guidelines.md  uv_setup.md
